# Proyecto1

./: Algoritmos.cpp  Algoritmos.h  ArchivoInvalidoException.cpp  ArchivoInvalidoException.h  CMakeLists.txt  Equipo.cpp  Equipo.h  EstrategiaMantenimiento.cpp  EstrategiaMantenimiento.h  FormatoInvalidoException.cpp  FormatoInvalidoException.h  Incidencia.cpp  Incidencia.h  Laboratorio.cpp  Laboratorio.h  MantenimientoCorrectivo.cpp  MantenimientoCorrectivo.h  OperacionInconsistenteException.cpp  OperacionInconsistenteException.h  PCBasica.cpp  PCBasica.h  Servidor.cpp  Servidor.h  Severidad.h  Sevidor.cpp  Sevidor.h  Simulador.cpp  Simulador.h  main.cpp
